--- a/app/src/main/res/layout/activity_category_menu.xml
+++ b/app/src/main/res/layout/activity_category_menu.xml
@@ -23,6 +23,16 @@
             android:layout_height="50dp"
             android:background="#ffffff">
 
+            <ImageView
+                android:id="@+id/iv_btn_category_setting_close"
+                android:background="#ffffff"
+                android:layout_marginStart="10dp"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close_black_24dp" />
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
