--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_item_board_list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -148,6 +147,7 @@
 
     //contents
     <LinearLayout
+        android:id="@+id/ll_item_board_list_contents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -331,7 +331,7 @@
                 android:src="@drawable/ic_share_black_24dp" />
 
             <ImageView
-                android:id="@+id/iv_item_board_menu"
+                android:id="@+id/iv_item_board_more_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
