--- a/app/src/main/res/layout/activity_up_board.xml
+++ b/app/src/main/res/layout/activity_up_board.xml
@@ -29,7 +29,8 @@
             android:lineSpacingExtra="5sp"
             android:text="작성"
             android:textColor="#b0caea"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            />
 
     </RelativeLayout>
 
