--- a/app/src/main/res/drawable-hdpi/round.xml
+++ b/app/src/main/res/drawable-hdpi/round.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
 <shape android:shape="rectangle">
-    <corners android:radius="10dip" />
-    <solid android:color="#efefef" />
+    <corners android:radius="15dip" />
+    <solid android:color="#ebf8f8f8" />
     <stroke android:width="1dp" android:color="#2f2f2f"/>
 </shape>
 </item>
