--- a/app/src/main/res/layout/activity_lounge_introduce.xml
+++ b/app/src/main/res/layout/activity_lounge_introduce.xml
@@ -84,7 +84,8 @@
 
     //소개
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_lounge_introduce_introduce_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -144,7 +145,6 @@ INNOVATOR CLUB"
     </LinearLayout>
 
     //일정
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_lounge_introduce_introduce_schedule"
         android:layout_width="match_parent"
@@ -193,7 +193,15 @@ INNOVATOR CLUB"
             android:layout_below="@id/rl_lounge_schedule_text"
             android:layout_gravity="center"
             android:background="#ffffff">
-            //달력 들어갈 부분</RelativeLayout>
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/calendarView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:mcv_showOtherDates="all"
+                app:mcv_selectionColor="#00F"
+                />
+        </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/rl_lounge_event_text"
