--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -70,7 +70,7 @@
             android:textColor="#999999"
             android:layout_marginLeft="113dp"
             />
-        <TextView
+        <Button
             android:layout_marginTop="5dp"
             android:layout_marginRight="23dp"
             android:layout_alignParentRight="true"
@@ -164,7 +164,7 @@
             android:gravity="center_horizontal"
             android:text=""/>
 
-    <TextView
+    <Button
         android:layout_marginTop="26dp"
         android:id="@+id/tv_sign_up2_confirm_number_send_message"
         android:layout_gravity="center"
