--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,17 +7,17 @@
     android:orientation="vertical"
     android:background="#ffffff"
     tools:context=".Moohyeon.Activity.LoginActivity">
-    <TextView
-        android:layout_marginTop="96dp"
+    <ImageView
+        android:src="@drawable/ic_gings"
+        android:layout_marginTop="34.5dp"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="36sp"
+        android:layout_width="42.2dp"
+        android:layout_height="58.5dp"
         android:textColor="#222222"
         android:letterSpacing="-0.01"
         android:lineSpacingExtra="-20sp"
         android:gravity="center_horizontal"
-        android:text="GINGS"
+
 
         />
     <LinearLayout
@@ -73,7 +73,7 @@
     </LinearLayout>
     <TextView
         android:id="@+id/tv_login_login_button"
-        android:background="@drawable/back"
+        android:background="#f7746b"
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:layout_width="324dp"
@@ -122,7 +122,7 @@
             android:textColor="#5c5c5c"
             android:lineSpacingExtra="4sp"
             android:gravity="center"
-            android:text="ABOUT GINGS"
+            android:text="깅스 안내"
             />
         <TextView
             android:id="@+id/tv_login_join_us"
@@ -134,7 +134,7 @@
             android:textColor="#5c5c5c"
             android:lineSpacingExtra="4sp"
             android:gravity="center"
-            android:text="JOIN US"
+            android:text="회원가입"
             />
 
     </LinearLayout>
