--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -46,10 +46,14 @@
                         android:textStyle="bold"
                         android:layout_gravity="center"
                         />
-                    <ImageView
+                    <TextView
+                        android:background="#b0caea"
                         android:layout_width="39dp"
                         android:layout_height="14dp"
-                        android:background="@drawable/invalid_name"
+                        android:textSize="8sp"
+                        android:textColor="#ffffff"
+                        android:letterSpacing="-0.01"
+                        android:lineSpacingExtra="8sp"
                         android:layout_gravity="center"
                         />
 
@@ -77,7 +81,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="협업여부"
+                        android:text="활동분야"
                         android:textSize="10sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
@@ -113,7 +117,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="협업여부"
+                        android:text="업무상태"
                         android:textSize="10sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
@@ -260,8 +264,8 @@
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/mypage_guestboard_recyclerview"
-            android:layout_width="wrap_content"
+            android:id="@+id/rv_mypage_guestboard_recyclerview"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:background="#ffffff"
