--- a/app/src/main/res/drawable/alarm_selector.xml
+++ b/app/src/main/res/drawable/alarm_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/alarm_on" /> <!-- selected -->
-    <item android:drawable="@drawable/selector_bottom_navi_notice_icon" /> <!-- default -->
+    <item android:state_selected="true" android:drawable="@drawable/tab_4_on" /> <!-- selected -->
+    <item android:drawable="@drawable/tab_4_off" /> <!-- default -->
 </selector>
