--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,10 @@
 
             <ImageButton
                 android:id="@+id/main_hometab_btn"
-                android:layout_width="46.08dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_gravity="center"
+                android:layout_gravity="bottom"
                 android:background="#00000000"
                 android:padding="7sp"
                 android:scaleType="fitCenter"
@@ -47,42 +47,46 @@
 
             <ImageButton
                 android:id="@+id/main_directory_btn"
-                android:layout_width="46.08dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#00000000"
                 android:padding="6sp"
                 android:scaleType="fitCenter"
+                android:layout_gravity="bottom"
                 android:src="@drawable/directorytab_selector"/>
 
             <ImageButton
                 android:id="@+id/main_lounge_btn"
-                android:layout_width="41dp"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#00000000"
                 android:padding="2sp"
                 android:scaleType="fitCenter"
+                android:layout_gravity="bottom"
                 android:src="@drawable/lounge_selector" />
 
             <ImageButton
                 android:id="@+id/main_alarm_btn"
-                android:layout_width="46.08dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#00000000"
                 android:padding="7sp"
                 android:scaleType="fitCenter"
+                android:layout_gravity="bottom"
                 android:src="@drawable/alarm_selector" />
 
             <ImageButton
                 android:id="@+id/main_mypage_btn"
-                android:layout_width="46.08dp"
-                android:layout_height="50dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#00000000"
                 android:padding="7sp"
                 android:scaleType="fitCenter"
+                android:layout_gravity="bottom"
                 android:src="@drawable/mypage_selector" />
 
         </LinearLayout>
