--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
-    android:background="#000000"
+    android:background="#f4f4f4"
     android:orientation="vertical"
     android:layout_height="match_parent" android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
         android:background="#FFFFFF"
-        android:layout_width="match_parent" android:layout_height="56dp"
-        android:paddingStart="14.5dp" android:paddingRight="7dp">
+        android:layout_width="match_parent" android:layout_height="54dp"
+         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="#222222"
-            android:letterSpacing="-0.01"
-            android:lineSpacingExtra="0sp"
-            android:text="GINGS"
+        <ImageView
+            android:layout_width="52dp"
+            android:layout_height="20dp"
+            android:src="@drawable/main_typo"
+            android:layout_marginLeft="13dp"
             android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
 
         <ImageView
             android:layout_toLeftOf="@+id/iv_btn_home_board_category"
             android:id="@+id/iv_btn_home_board_search"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_black_24dp"/>
+            android:layout_width="30dp" android:layout_height="30dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/bt_search"/>
         <ImageView
             android:id="@+id/iv_btn_home_board_category"
             android:layout_centerVertical="true"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:src="@drawable/ic_close_black_24dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/bt_category"
+            android:layout_marginRight="12dp"
             android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#888888"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="8dp">
+        
+    </LinearLayout>
+
+
 
     <RelativeLayout
         android:background="#FFFFFF"
@@ -42,23 +53,37 @@
         <ImageView
             android:id="@+id/iv_home_board_profile_img"
             android:layout_width="32dp" android:layout_height="32dp"
-            android:layout_marginEnd="16dp" android:layout_marginStart="17.5dp"
-            android:src="#b0caea"
+             android:layout_marginStart="12.7dp"
+            android:src="@drawable/gings_icon"
             android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
+
+        <View
+            android:id="@+id/home_board_top_view"
+            android:layout_width="3dp"
+            android:layout_height="match_parent"
+            android:background="#f8bab6"
+            android:layout_marginLeft="12.3dp"
+            android:layout_toRightOf="@+id/iv_home_board_profile_img"
+            />
         <TextView
             android:id="@+id/tv_home_board_write_board"
-            android:layout_marginStart="65.5dp"
-            android:layout_toEndOf="@+id/iv_home_board_profile_img"
+            android:layout_marginLeft="6.5dp"
             android:background="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="2sp"
+            android:layout_toRightOf="@+id/home_board_top_view"
             android:hint="공유하고싶은 소식을 입력하세요"
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#999999"
+        />
+
 
 
     <LinearLayout
@@ -66,6 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_marginTop="9.5dp"
         android:background="#FFFFFF">
 
         <android.support.v7.widget.RecyclerView
