--- a/app/src/main/res/layout/fragmet_my_page_introduce.xml
+++ b/app/src/main/res/layout/fragmet_my_page_introduce.xml
@@ -30,6 +30,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginTop="8dp"
                     >
                     <ImageView
                         android:layout_width="23dp"
@@ -45,13 +46,25 @@
                         android:textSize="10sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
+                        android:layout_marginTop="3.2dp"
                         />
-                    <ImageView
+                    <RelativeLayout
                         android:layout_width="39dp"
                         android:layout_height="14dp"
-                        android:background="@drawable/invalid_name"
+                        android:background="@drawable/mypage_circle_background"
                         android:layout_gravity="center"
-                        />
+                        android:layout_marginTop="2.4dp"
+                        >
+                        <TextView
+                            android:id="@+id/mypage_intro_on_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="ON"
+                            android:textColor="#ffffff"
+                            android:textSize="8sp"
+                            android:layout_centerInParent="true"
+                            />
+                    </RelativeLayout>
 
                 </LinearLayout>
                 <View
@@ -66,6 +79,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginTop="8dp"
                     >
                     <ImageView
                         android:layout_width="23dp"
@@ -73,7 +87,6 @@
                         android:background="@drawable/invalid_name"
                         android:layout_gravity="center"
                         />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -81,13 +94,25 @@
                         android:textSize="10sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
+                        android:layout_marginTop="3.2dp"
                         />
-                    <ImageView
+                    <RelativeLayout
                         android:layout_width="39dp"
                         android:layout_height="14dp"
-                        android:background="@drawable/invalid_name"
+                        android:background="@drawable/mypage_circle_background"
                         android:layout_gravity="center"
-                        />
+                        android:layout_marginTop="2.4dp"
+                        >
+                        <TextView
+                            android:id="@+id/mypage_intro_field_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="기획/설계"
+                            android:textColor="#ffffff"
+                            android:textSize="8sp"
+                            android:layout_centerInParent="true"
+                            />
+                    </RelativeLayout>
 
                 </LinearLayout>
                 <View
@@ -102,6 +127,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginTop="8dp"
                     >
                     <ImageView
                         android:layout_width="23dp"
@@ -113,17 +139,29 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="협업여부"
+                        android:text="업무상태"
                         android:textSize="10sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
+                        android:layout_marginTop="3.2dp"
                         />
-                    <ImageView
+                    <RelativeLayout
                         android:layout_width="39dp"
                         android:layout_height="14dp"
-                        android:background="@drawable/invalid_name"
+                        android:background="@drawable/mypage_circle_background"
                         android:layout_gravity="center"
-                        />
+                        android:layout_marginTop="2.4dp"
+                        >
+                        <TextView
+                            android:id="@+id/mypage_intro_status_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="구인중"
+                            android:textColor="#ffffff"
+                            android:textSize="8sp"
+                            android:layout_centerInParent="true"
+                            />
+                    </RelativeLayout>
 
                 </LinearLayout>
 
@@ -137,7 +175,7 @@
             android:layout_height="190dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:background="#ffffff"
+            android:background="@drawable/mypage_intro_background"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
@@ -185,10 +223,10 @@
                 />
 
             <TextView
-                android:id="@+id/mypage_board_date_tv"
+                android:id="@+id/mypage_board_datetime_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2018/12/30"
+                android:text="2018/12/30   01:16"
                 android:textSize="9sp"
                 android:layout_marginTop="4.8dp"
                 android:layout_toRightOf="@+id/mypage_board_view"
@@ -197,18 +235,6 @@
                 android:layout_below="@+id/mypage_board_name_tv"
                 />
 
-            <TextView
-                android:id="@+id/mypage_board_time_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="01:16"
-                android:textSize="9sp"
-                android:layout_marginTop="4.8dp"
-                android:layout_toRightOf="@+id/mypage_board_date_tv"
-                android:textColor="#999999"
-                android:layout_marginLeft="5dp"
-                android:layout_below="@+id/mypage_board_name_tv"
-                />
 
             <TextView
                 android:id="@+id/mypage_board_content_tv"
@@ -220,7 +246,7 @@
 메세지를 보내주세요. 화이팅!"
                 android:layout_marginLeft="60dp"
                 android:layout_marginRight="38dp"
-                android:layout_below="@+id/mypage_board_date_tv"
+                android:layout_below="@+id/mypage_board_datetime_tv"
                 android:layout_marginTop="10dp"
                 android:textSize="13sp"
                 android:textColor="#222222"
