--- a/app/src/main/res/layout/fragment_mypage_act.xml
+++ b/app/src/main/res/layout/fragment_mypage_act.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    >
+android:background="#f4f4f4"    >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mypage_act_recyclerview"
