--- a/app/src/main/res/layout/rv_item_act_board.xml
+++ b/app/src/main/res/layout/rv_item_act_board.xml
@@ -1,73 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="63dp">
+        android:layout_height="63dp"
+        android:background="#ffffff">
 
         <TextView
             android:id="@+id/item_act_question_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="질문"
-            android:textSize="15sp"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:layout_marginTop="16dp"
             android:layout_marginLeft="18.5dp"
-            />
+            android:layout_marginTop="16dp"
+            android:text="질문"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/item_act_view"
             android:layout_width="1dp"
             android:layout_height="15.6dp"
-            android:background="#999999"
-            android:layout_toRightOf="@+id/item_act_question_tv"
-            android:layout_marginTop="19.8dp"
             android:layout_marginLeft="10dp"
-            />
+            android:layout_marginTop="19.8dp"
+            android:layout_toRightOf="@+id/item_act_question_tv"
+            android:background="#999999" />
 
         <TextView
             android:id="@+id/item_act_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="창업하고 싶은데 어떻게 준비하면 좋을까요?"
-            android:textSize="15sp"
-            android:textColor="#222222"
-            android:layout_toRightOf="@+id/item_act_view"
             android:layout_alignTop="@+id/item_act_question_tv"
             android:layout_marginLeft="10dp"
-            />
+            android:layout_toRightOf="@+id/item_act_view"
+            android:text="창업하고 싶은데 어떻게 준비하면 좋을까요?"
+            android:textColor="#222222"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignTop="@+id/item_act_question_tv"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="12dp"
+            android:src="@drawable/bt_more" />
 
         <TextView
             android:id="@+id/item_act_hashtag_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="#사업 #창업 #준비 #팁"
             android:layout_below="@+id/item_act_title_tv"
             android:layout_alignLeft="@+id/item_act_title_tv"
-            android:textSize="10sp"
-            android:textColor="#999999"
             android:layout_marginTop="3dp"
-            />
+            android:text="#사업 #창업 #준비 #팁"
+            android:textColor="#999999"
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/item_act_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3시간전"
-            android:textSize="10sp"
-            android:textColor="#999999"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="31dp"
             android:layout_below="@+id/item_act_title_tv"
-            />
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="31dp"
+            android:text="3시간전"
+            android:textColor="#999999"
+            android:textSize="10sp" />
 
 
     </RelativeLayout>
@@ -75,153 +79,159 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        android:background="#ffffff"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/item_act_background_img"
             android:layout_width="match_parent"
             android:layout_height="300dp"
-            android:src="@drawable/invalid_name"
-            android:scaleType="fitXY"
             android:layout_marginTop="8dp"
-            />
+            android:scaleType="fitXY"
+            android:src="@drawable/invalid_name" />
+
         <TextView
             android:id="@+id/item_act_content_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="66.5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="69.5dp"
             android:text="이번에 처음 준비하는데 너무 어렵네요ㅠㅠ
 팁 좀 주세요...ㅠㅠ"
-            android:textSize="13sp"
             android:textColor="#222222"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="66.5dp"
-            android:layout_marginRight="69.5dp"
-            />
+            android:textSize="13sp" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal"
+            android:layout_height="56dp"
             android:layout_marginTop="18dp"
-            >
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1"
-                >
+            android:background="#ffffff">
+
+            <RelativeLayout
+                android:layout_marginLeft="19dp"
+                android:layout_width="192dp"
+                android:layout_height="31dp"
+                android:layout_centerVertical="true">
 
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/item_act_profile_img"
+
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="19dp"
-                    android:src="@drawable/invalid_name"
-                    />
+                    android:src="@drawable/invalid_name" />
 
                 <TextView
                     android:id="@+id/item_act_name_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="이충엽"
-                    android:textSize="12sp"
+                    android:layout_centerVertical="true"
                     android:layout_marginLeft="14.5dp"
-                    android:layout_gravity="center"
-                    />
+                    android:layout_toRightOf="@+id/item_act_profile_img"
+                    android:text="이충엽"
+                    android:textSize="12sp" />
 
                 <View
+                    android:id="@+id/item_act_profile_view"
+                    android:layout_toRightOf="@+id/item_act_name_tv"
+                    android:layout_centerVertical="true"
                     android:layout_width="1dp"
                     android:layout_height="7.6dp"
-                    android:background="#999999"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="7.2dp"
-                    android:layout_gravity="center"
-                    />
+                    android:background="#999999" />
 
                 <TextView
-                    android:id="@+id/item_act_role_tv"
+                    android:layout_toRightOf="@+id/item_act_profile_view"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/item_act_team_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="깅스/PM"
-                    android:textSize="10sp"
+                    android:layout_gravity="center"
                     android:layout_marginLeft="8.8dp"
+                    android:text="깅스"
+                    android:textColor="#525252"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:layout_toRightOf="@+id/item_act_team_tv"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/item_act_role_slash_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:text="/"
                     android:textColor="#525252"
-                    />
-
-
-
-        </LinearLayout>
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                >
-
-                <ImageView
-                    android:layout_width="24.3dp"
-                    android:layout_height="24.3dp"
-                    android:src="@drawable/invalid_name"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="155.3dp"
-                    android:layout_centerVertical="true"
-                    />
+                    android:textSize="10sp" />
 
                 <TextView
+                    android:layout_centerVertical="true"
+                    android:id="@+id/item_act_role_role_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="999+"
-                    android:textSize="10sp"
-                    android:layout_centerVertical="true"
+                    android:layout_gravity="center"
+                    android:layout_toRightOf="@+id/item_act_role_slash_tv"
+                    android:text="PM"
                     android:textColor="#525252"
-                    android:layout_marginRight="134dp"
-                    android:layout_alignParentRight="true"
-                    />
-
-                <ImageView
-                    android:layout_width="24.3dp"
-                    android:layout_height="24.3dp"
-                    android:src="@drawable/invalid_name"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="101.1dp"
-                    android:layout_centerVertical="true"
-                    />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="999+"
-                    android:textSize="10sp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="80dp"
-                    android:layout_alignParentRight="true"
-                    android:textColor="#525252"
-                    />
-                <ImageView
-                    android:layout_width="24.3dp"
-                    android:layout_height="24.3dp"
-                    android:src="@drawable/invalid_name"
-                    android:layout_marginRight="51.4dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    />
-                <ImageView
-                    android:layout_width="24.3dp"
-                    android:layout_height="24.3dp"
-                    android:src="@drawable/invalid_name"
-                    android:layout_marginLeft="14.4dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="18dp"
-                    android:layout_centerVertical="true"
-                    />
-
+                    android:textSize="10sp" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="209dp">
+
+                <ImageView
+                    android:id="@+id/iv_item_like_btn"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_like"
+
+                    />
+
+                <TextView
+                    android:layout_toRightOf="@+id/iv_item_like_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="7.7dp"
+                    android:text="999+"
+                    android:textColor="#525252"
+                    android:textSize="10sp" />
+
+                <ImageView
+                    android:id="@+id/iv_item_reple"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="63dp"
+                    android:src="@drawable/ic_reple" />
+
+                <TextView
+                    android:layout_toRightOf="@+id/iv_item_reple"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="7.7dp"
+                    android:text="999+"
+                    android:textColor="#525252"
+                    android:textSize="10sp" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentRight="true"
+
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/bt_share" />
 
 
-        </LinearLayout>
-
+            </RelativeLayout>
+        </RelativeLayout>
 
 
     </LinearLayout>
@@ -229,7 +239,10 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#e2e8ed"
-        android:layout_marginTop="16dp"
-        />
+        android:background="#e2e8ed" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        android:background="#f9f9f9" />
 </LinearLayout>
