--- a/app/src/main/res/layout/rv_item_guest_board.xml
+++ b/app/src/main/res/layout/rv_item_guest_board.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="30dp"
     android:layout_marginTop="16.7dp"
     android:layout_marginBottom="13.3dp"
     >
@@ -14,82 +13,108 @@
         android:layout_height="36dp"
         android:src="@drawable/invalid_name"
         android:layout_marginTop="21dp"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="30dp"
         />
 
-    <TextView
-        android:id="@+id/item_guest_name_tv"
+    <RelativeLayout
+        android:id="@+id/rl_item_guest_profile_board"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이충엽"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:layout_marginTop="21.2dp"
-        android:layout_toRightOf="@+id/item_guest_profile_img"
+        android:layout_alignTop="@+id/item_guest_profile_img"
         android:layout_marginLeft="8.5dp"
-        android:textColor="#222222"
-        />
+        android:layout_toRightOf="@+id/item_guest_profile_img">
 
-    <View
-        android:id="@+id/item_guest_view"
-        android:layout_width="1dp"
-        android:layout_height="8dp"
-        android:background="#999999"
-        android:layout_toRightOf="@+id/item_guest_name_tv"
-        android:layout_marginTop="28dp"
-        android:layout_marginLeft="9.1dp"
-        />
+        <TextView
+            android:id="@+id/item_guest_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이충엽"
+            android:textColor="#222222"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/item_guest_view"
+            android:layout_width="1dp"
+            android:layout_height="8dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="9dp"
+            android:layout_toRightOf="@+id/item_guest_name_tv"
+            android:background="#999999" />
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:id="@+id/tv_item_guest_slash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8.5dp"
+            android:layout_toRightOf="@+id/item_guest_view"
+            android:text="SWU"
+            android:textColor="#525252"
+            android:textSize="10sp" />
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:id="@+id/tv_item_guest_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8.5dp"
+            android:layout_toRightOf="@+id/tv_item_guest_slash"
+            android:text="/"
+            android:textColor="#525252"
+            android:textSize="10sp" />
+
+        <TextView
+            android:layout_centerVertical="true"
+            android:id="@+id/tv_item_guest_role"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8.5dp"
+            android:layout_toRightOf="@+id/tv_item_guest_view"
+            android:text="DESIGNER"
+            android:textColor="#525252"
+            android:textSize="10sp" />
+
+
+    </RelativeLayout>
+
 
     <TextView
-        android:id="@+id/item_guest_role_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SWU/DESIGNER"
-        android:textSize="10sp"
-        android:layout_marginTop="21.2dp"
-        android:layout_toRightOf="@+id/item_guest_view"
-        android:layout_marginLeft="8.5dp"
-        android:textColor="#525252"
-        />
-
-    <TextView
+        android:layout_marginStart="9dp"
         android:id="@+id/item_guest_date_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/rl_item_guest_profile_board"
+        android:layout_toEndOf="@+id/item_guest_profile_img"
         android:text="2018/12/30"
-        android:textSize="9sp"
         android:layout_marginTop="4.8dp"
-        android:layout_toRightOf="@+id/item_guest_view"
         android:textColor="#999999"
-        android:layout_alignLeft="@+id/item_guest_name_tv"
-        android:layout_below="@+id/item_guest_name_tv"
-        />
+        android:textSize="9sp" />
 
     <TextView
         android:id="@+id/item_guest_time_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="01:16"
-        android:textSize="9sp"
-        android:layout_marginTop="4.8dp"
+        android:layout_marginLeft="9dp"
+        android:layout_below="@+id/rl_item_guest_profile_board"
         android:layout_toRightOf="@+id/item_guest_date_tv"
+        android:text="01:16"
+        android:layout_marginTop="4.8dp"
         android:textColor="#999999"
-        android:layout_marginLeft="5dp"
-        android:layout_below="@+id/item_guest_name_tv"
-        />
+        android:textSize="9sp" />
 
     <TextView
         android:id="@+id/item_guest_content_tv"
-        android:layout_width="258dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="편안한 협업 보장! 함께 하기 좋은 기획자! 추천합니다."
-        android:layout_alignLeft="@+id/item_guest_profile_img"
-        android:layout_marginRight="30dp"
         android:layout_below="@+id/item_guest_date_tv"
         android:layout_marginTop="11dp"
-        android:textSize="13sp"
-        android:textColor="#222222"
         android:layout_marginBottom="16dp"
-        />
+        android:layout_marginRight="38dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginStart="30dp"
+        android:text="편안한 협업 보장! 함께 하기 좋은 기획자! 추천합니다."
+        android:textColor="#222222"
+        android:textSize="13sp" />
 
 </RelativeLayout>
